Fix .cta width causing horizontal scroll on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,9 @@ html {
   padding-top: 100px;
   position: relative;
   width: 550px;
+  @include mobile {
+    width: 100%;
+  }
   &__pattern {
     position: absolute;
     left: 50%;
@@ -256,7 +259,7 @@ html {
       }
       .discount {
         color: $text__discount;
-        display: none;
+        display: inline;
         font-size: 0.65rem;
         position: absolute;
         right: -20px;
